--- a/debian_config.yml
+++ b/debian_config.yml
@@ -6,6 +6,8 @@ custom_hostname: localhost
 #Check these variables for version updates
 freefilesync_file_ver: "FreeFileSync_13.6_Linux.tar.gz"
 veracrypt_file_ver: "veracrypt-1.26.7-Debian-12-amd64.deb"
+tor_download_link: "https://www.torproject.org/dist/torbrowser/13.0.15/tor-browser-linux-x86_64-13.0.15.tar.xz"
+mullvad_browser_ver: "mullvad-browser-linux-x86_64-13.0.15.tar.xz"
 
 # Gnome 
 gtk_version: 3.0
