--- a/tasks/customization.yml
+++ b/tasks/customization.yml
@@ -8,18 +8,19 @@
     state: directory
     mode: '0755'
 
-## Dracula Theme
-- name: Download Dracula GTK Theme
-  ansible.builtin.unarchive:
-    src: 'https://github.com/dracula/gtk/releases/latest/download/Dracula.tar.xz'
-    dest: "/home/{{ username }}/.themes/"
-    remote_src: yes
+# NOTE: Theme only works for Terminal and not for Files app. Gnome seems to be applying the theme to certain apps.
+# ## Dracula Theme
+# - name: Download Dracula GTK Theme
+#   ansible.builtin.unarchive:
+#     src: 'https://github.com/dracula/gtk/releases/latest/download/Dracula.tar.xz'
+#     dest: "/home/{{ username }}/.themes/"
+#     remote_src: yes
 
-- name: Gsettings for theme (interface)
-  ansible.builtin.command: gsettings set org.gnome.desktop.interface gtk-theme "Dracula"
+# - name: Gsettings for theme (interface)
+#   ansible.builtin.command: gsettings set org.gnome.desktop.interface gtk-theme "Dracula"
 
-- name: Gsettings for theme (WM Preference)
-  ansible.builtin.command: gsettings set org.gnome.desktop.wm.preferences theme "Dracula"
+# - name: Gsettings for theme (WM Preference)
+#   ansible.builtin.command: gsettings set org.gnome.desktop.wm.preferences theme "Dracula"
 
 # Icon
 - name: Create the icon directory (locally)
@@ -35,7 +36,7 @@
     remote_src: yes
 
 - name: Gsettings for icons
-  ansible.builtin.command: gsettings set org.gnome.desktop.interface icon-theme candy-icons
+  ansible.builtin.command: gsettings set org.gnome.desktop.interface icon-theme candy-icons-master
 
 # Font
 - name: Create .fonts Directory 
@@ -59,9 +60,14 @@
 
 - name: Unarchive the tor zip
   ansible.builtin.unarchive:
-    src: "/home/{{ username }}/Downloads/tor-browser-linux-x86_64-13.0.8.tar.xz"
+    src: "/home/{{ username }}/Downloads/{{ tor_file_ver }}"
     dest: "/home/{{ username }}/Downloads/"
     remote_src: yes
+
+- name: Remove TOR archive
+  ansible.builtin.file:
+    path: "/home/{{ username }}/Downloads/{{ tor_file_ver }}"
+    state: absent
 
 - name: Download Mullvad Browser
   ansible.builtin.get_url:
@@ -73,3 +79,8 @@
     src: "/home/{{ username }}/Downloads/{{ mullvad_browser_ver }}"
     dest: "/home/{{ username }}/Downloads/"
     remote_src: yes
+
+- name: Remove Mullvad archive
+  ansible.builtin.file:
+    path: "/home/{{ username }}/Downloads/{{ mullvad_browser_ver }}"
+    state: absent
