--- a/tasks/snap.yml
+++ b/tasks/snap.yml
@@ -15,9 +15,10 @@
   when: snap_packages is defined
 
 # Link your snap .desktop folder inside one of your user or system .desktop folders
-- name: Show snaps in Application list
-  ansible.builtin.file:
-    src: /var/lib/snapd/desktop/applications
-    dest: /home/{{ username }}/.local/share/applications/snap
-    state: link
-    become: true
+## Snap seems to do the following by default
+# - name: Show snaps in Application list
+#   ansible.builtin.file:
+#     src: /var/lib/snapd/desktop/applications
+#     dest: /home/{{ username }}/.local/share/applications/snap
+#     state: link
+#     become: true
