--- a/tasks/customization.yml
+++ b/tasks/customization.yml
@@ -41,13 +41,13 @@
 # Font
 - name: Create .fonts Directory 
   file:
-    path: "{{ username }}/.fonts"
+    path: "/home/{{ username }}/.fonts"
     state: directory
 
 - name: Download FiraCode Nerd Font
   ansible.builtin.unarchive:
     src: https://github.com/ryanoasis/nerd-fonts/releases/latest/download/FiraCode.zip
-    dest: "{{ username }}/.fonts/"
+    dest: "/home/{{ username }}/.fonts/"
     remote_src: yes
 
 - name: Fonts Cache Reload
@@ -88,3 +88,26 @@
   ansible.builtin.file:
     path: "/home/{{ username }}/Downloads/{{ mullvad_browser_ver }}"
     state: absent
+
+# Ohmyzsh with plugins
+- name: Ohmyzsh Install
+  ansible.builtin.expect:
+    command: sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+    responses:
+      (?i)shell to zsh?(?i): "n"
+
+- name: Git clone plugin - zsh-syntax-highlighting
+  ansible.builtin.git:
+    repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+    dest: "/home/{{ username }}/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+
+- name: Git clone plugin - zsh-autosuggestions
+  ansible.builtin.git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions.git
+    dest: "/home/{{ username }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
+
+- name: Ohmyzsh update plugins
+  ansible.builtin.lineinfile:
+    path: "/home/{{ username }}/.zshrc"
+    regexp: '^plugins='
+    line: plugins=( git zsh-syntax-highlighting zsh-autosuggestions ripgrep rsync colored-man-pages )
