--- a/tasks/apt.yml
+++ b/tasks/apt.yml
@@ -20,8 +20,8 @@
     update_cache: true
     state: latest
   loop: "{{ apt_packages }}"
-  loop_control:
-    pause: 5 # 7 second pause - 5 seemed to be a bit less
+  # loop_control:
+  #   pause: 5 # 7 second pause - 5 seemed to be a bit less
   register: install_result
   when: apt_packages is defined
 
