--- a/tasks/deb_packages.yml
+++ b/tasks/deb_packages.yml
@@ -35,7 +35,7 @@
     state: directory
     mode: '0755'
 
-- name: Download FreeFileSync .deb package
+- name: Download FreeFileSync package
   ansible.builtin.get_url:
     url: "https://freefilesync.org/download/{{ freefilesync_file_ver }}"
     dest: "/home/{{ username }}/Downloads/FreeFileSync/{{ freefilesync_file_ver }}"
@@ -45,6 +45,10 @@
     src: "/home/{{ username }}/Downloads/FreeFileSync/{{ freefilesync_file_ver }}"
     dest: "/home/{{ username }}/Downloads/FreeFileSync"
 
+- name: Removing FreeFileSync File
+  ansible.builtin.file:
+    path: "/home/{{ username }}/Downloads/FreeFileSync/{{ freefilesync_file_ver }}"
+    state: absent
 
 - name: Removing debian directory (clean-up)
   ansible.builtin.file:
